[package]
name = "medical-markdown"
version = "0.1.0"
edition = "2024"
description = "A markdown-it plugin for clinical note-taking with structured data extraction"
license = "MIT"

[dependencies]
markdown-it = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
pretty_assertions = "1"

[[bin]]
name = "medmd"
path = "src/bin/medmd.rs"
